Refactor layout classes